--- a/sherly_app/templates/categories/ajouter.html
+++ b/sherly_app/templates/categories/ajouter.html
@@ -22,6 +22,14 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="form-row">
+                                <div class="form-group col-md-1">
+                                    <label for="is_active">ACTIVE</label>
+                                    <div class="input-group">
+                                        <input type="checkbox" class="form-control" id="is_active" name="is_active" >
+                                    </div>
+                                </div>
+                            </div>
 
                             <button type="submit" class="btn btn-success btn-block">Valider</button>
                         </form>
