--- a/sherly_app/templates/commande/liste.html
+++ b/sherly_app/templates/commande/liste.html
@@ -3,6 +3,45 @@
 {% block title %} BL app {% endblock %}
 
 {% block content %}
+<style>
+/* Modal styles */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; /* Could be more or less, depending on screen size */
+}
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+
+
+</style>
     <div class="container mt-4">
         
         
@@ -17,7 +56,7 @@
             <a href="{% url 'add_commande' %}" class="btn btn-success mb-4">AJOUTER</a>
             <div class="card">
                 <div class="card-header" style="background-color: #4CAF50; color: white;">
-                    <h2 class="mb-0">LISTE DES BONS DE LIVRAISON</h2>
+                    <h2 class="mb-0">LISTE DES BONS DE COMMANDE</h2>
                 </div>
                 <div class="card-body">
                     <table class="table table-striped">
@@ -27,6 +66,8 @@
                                 <th>NOM CLIENT</th>
                                 <th>DATE DE CMDE</th>
                                 <th>No BL</th>
+                                <th>CRÉATEUR</th>
+                                
                                 {% if user.is_superuser %}
                                 <th>Action</th>
                                 {% endif %}
@@ -41,10 +82,12 @@
                                     <td>{{item.client}}</td>
                                     <td>{{item.date_de_cmd  | date:"d-m-Y"}}</td>
                                     <td>{{item.bon_livraison.no_bl}}</td>
+                                    <td>{{item.user.username}}</td>
                                     {% if user.is_superuser %}
                                     <td>
                                         <a href="{% url 'page' bl_id=item.bon_livraison.id  %}" class="text-primary"><i class="bi bi-download"></i></a>
-                                        <a href="" class="text-danger"><i class="bi bi-trash"></i></a>
+                                        
+                                        <a href="{% url 'delete_confirmation' id=item.id %}" class="text-danger" ><i class="bi bi-trash"></i></a>
                                         <a href="{% url 'edit_commande' bl_id=item.bon_livraison.id %}" class="text-warning"><i class="bi bi-pencil"></i></a>
                                     </td>
                                     {% endif %}
@@ -58,3 +101,7 @@
         </div>
     </div>
 {% endblock %}
+{% block extra_js %}
+
+{% endblock %}
+
