--- a/sherly_app/templates/pdf/pdf.html
+++ b/sherly_app/templates/pdf/pdf.html
@@ -53,23 +53,38 @@
             border-bottom: none;
         }
 
+        .larger-text {
+    font-size: 20px; /* Adjust the font size as needed */
+}
+
+.smaller-text {
+    font-size: 16px; /* Adjust the font size as needed */
+}
+
+body {
+    font-family: Arial, sans-serif;
+    /* Ajoutez d'autres styles d'impression ici */
+}
+
        
     </style>
 </head>
-<body>
+<body><br><br><br>
     <div class="center-container">
         <div class="cadre">
             <div class="container custom-container">
                 <!-- First row with logo and two text columns -->
-                <table class="table custom-table">
+                <table>
                     <tr>
-                        <td style="width: 15%;" class="custom-background-color">
+                        <td style="width: 15%;" >
+
                             <img src="{{ logo_absolute_url }}" alt="" style="max-width: 100%; height: auto;">
+                          
                         </td>
                         <td style="width: 33%; text-align: left;" class="custom-background-color2"> <!-- Set text alignment to left -->
                             <div class="text-container">
-                                {{societe.nom1}} <br>
-                                {{societe.nom2}}
+                                <span class="larger-text">{{ societe.nom1 }}</span> <br>
+                                <span class="smaller-text">{{ societe.nom2 }}</span>
                             </div>
                         </td>
                         <td style="width: 33%;">
@@ -77,7 +92,8 @@
                             <table class="table inner-table">
                                 <thead class="thead-dark custom-table-header">
                                     <tr>
-                                        <th scope="col">№ BL</th>
+                                        <br>
+                                        <th scope="col">N<sup>o</sup> BL</th>
                                         <th scope="col">DATE</th>
                                     </tr>
                                 </thead>
@@ -116,7 +132,7 @@
                             <table class="table inner-table">
                                 <thead class="thead-dark custom-table-header">
                                     <tr>
-                                        <th scope="col">Livré a</th>
+                                        <th scope="col">LIVRE A</th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -139,8 +155,8 @@
                             <!-- Content -->
                             <table class="table inner-table">
                                 <thead class="thead-dark custom-table-header">
-                                    <tr>
-                                        <th scope="col">Information Achteur</th>
+                                    <tr><br><br>
+                                        <th scope="col">INFORMATION  ACHETEUR</th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -158,16 +174,16 @@
                             </table>
                         </td>
                     </tr>
-                </table><br>
+                </table><br><br>
 
                 <div class="row ">
                     <div class="col-md-12">
                         <table class="table">
                             <thead class="thead-dark custom-table-header">
                                 <tr>
-                                    <th scope="col">Num BL</th>
+                                    <th scope="col">N<sup>o</sup> BL</th>
                                     <th scope="col">DATE BL</th>
-                                    <th scope="col">Num CMDE</th>
+                                    <th scope="col">N<sup>o</sup> CMDE</th>
                                     <th scope="col">DATE CMDE</th>
                                     <th scope="col">CODE CLIENT</th>
                                 </tr>
@@ -183,19 +199,19 @@
                             </tbody>
                         </table>
                     </div>
-                </div> <br>
+                </div> <br><br>
 
                 <div class="row ">
                     <div class="col-md-12">
                         <table class="table">
                             <thead class="thead-dark custom-table-header">
                                 <tr>
-                                    <th scope="col">Réference</th>
+                                    <th scope="col">Référence</th>
                                     <th scope="col">Désignation</th>
                                     <th scope="col">Conditionnement</th>
-                                    <th scope="col">Diamétre</th>
+                                    <th scope="col">Diamètre </th>
                                     <th scope="col">Rayon</th>
-                                    <th scope="col">Sphére</th>
+                                    <th scope="col">Sphère </th>
                                     <th scope="col">Cylindre</th>
                                     <th scope="col">Axe</th>
                                     <th scope="col">Oeil <br>D/G</th> 
@@ -246,7 +262,16 @@
                 <table style="width: 80%;">
                     <tr>
                         <td style="width: 33.33%;"></td>
-                        <td style="width: 66.67%; text-align: center;">{{ societe.nif }}</td>
+                        <td style="width: 66.67%; text-align: center;">
+                            {% if societe.nif %}
+                            {{ societe.nif }}
+                            {% else %}
+                            NIF:B062835052-N&ordm; IVA : ESB068350052
+                         
+                            {% endif %}
+                        
+                        </td>
+                        
                     </tr>
                 </table>
             </div>
