--- a/sherly_app/templates/produits/ajouter.html
+++ b/sherly_app/templates/produits/ajouter.html
@@ -44,6 +44,15 @@
                             <input type="number" class="form-control" id="conditionnement" name="conditionnement"  required>
                             {{ form.conditionnement_count.errors }}
                         </div>
+
+                        <div class="form-row">
+                            <div class="form-group col-md-0">
+                                <label for="is_active">ACTIVE</label>
+                                <div class="input-group">
+                                    <input type="checkbox" class="form-control" id="is_active" name="is_active" >
+                                </div>
+                            </div>
+                        </div>
                        
 
                         
