--- a/sherly_app/templates/produits/edit_product.html
+++ b/sherly_app/templates/produits/edit_product.html
@@ -45,6 +45,15 @@
                             <input type="number" class="form-control" id="conditionnement" name="conditionnement" value="{{ product.conditionnement_count }}" required>
                             {{ form.conditionnement_count.errors }}
                         </div>
+
+                        <div class="form-row">
+                            <div class="form-group col-md-0">
+                                <label for="is_active">ACTIVE</label>
+                                <div class="input-group">
+                                    <input type="checkbox" class="form-control" id="is_active" name="is_active" {% if product.is_active %}checked{% endif %}>
+                                </div>
+                            </div>
+                        </div>
                        
 
                         
