--- a/sherly_app/templates/utilisateurs/profile.html
+++ b/sherly_app/templates/utilisateurs/profile.html
@@ -8,7 +8,7 @@
             <div class="col-md-6">
                 <div class="card">
                     <div class="card-header" style="background-color: #4CAF50; color: white;">
-                        <h2 class="mb-0">AJOUT UTILISATEUR</h2>
+                        <h2 class="mb-0">PROFILE ADMINISTRATEUR</h2>
                     </div>
                     <div class="card-body">
                         <form method="post">
@@ -18,7 +18,7 @@
                                 <div class="form-group col-md-12">
                                     <label for="username">NOM D'UTILISATEUR</label>
                                     <div class="input-group">
-                                        <input type="text" class="form-control" id="username" name="username" required oninput="this.value = this.value.toUpperCase()">
+                                        <input type="text" class="form-control" id="username" name="username" required value="{{user.username}}" oninput="this.value = this.value.toUpperCase()">
                                     </div>
                                     {% if form.username.errors %}
                                         <span class="text-danger">{{ form.username.errors.0 }}</span>
@@ -33,7 +33,7 @@
                                 <div class="form-group col-md-6">
                                     <label for="password1">MOT DE PASSE</label>
                                     <div class="input-group">
-                                        <input type="password" class="form-control" id="password1" name="password1" required>
+                                        <input type="password" class="form-control" id="password1" name="password1"  required>
                                     </div>
                                     {% if form.password1.errors %}
                                         <span class="text-danger">{{ form.password1.errors.0 }}</span>
@@ -42,7 +42,7 @@
                                 <div class="form-group col-md-6">
                                     <label for="password2">CONFIRMER  MOT DE PASSE</label>
                                     <div class="input-group">
-                                        <input type="password" class="form-control" id="password2" name="password2" required>
+                                        <input type="password" class="form-control" id="password2" name="password2"  required>
                                     </div>
                                     {% if form.password2.errors %}
                                         <span class="text-danger">{{ form.password2.errors.0 }}</span>
